--- a/configs/releng/pacman.conf
+++ b/configs/releng/pacman.conf
@@ -76,6 +76,10 @@ LocalFileSigLevel = Optional
 [core]
 Include = /etc/pacman.d/mirrorlist
 
+[holo]
+Server = https://steamdeck-packages.steamos.cloud/archlinux-mirror/$repo/os/$arch
+SigLevel = Never
+
 [extra]
 Include = /etc/pacman.d/mirrorlist
 
