--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: shadowreaperscpf/kronosos-titan:latest
-      docker push shadowreaperscpf/kronosos-titan:tagname
+      docker: push shadowreaperscpf/kronosos-titan:tagname
       options: --privileged
     steps:
       - uses: actions/checkout@v2
