--- a/configs/releng/efiboot/loader/entries/02-archiso-x86_64-ram-linux.conf
+++ b/configs/releng/efiboot/loader/entries/02-archiso-x86_64-ram-linux.conf
@@ -1,4 +1,4 @@
-title    ArchHolo (x86_64, UEFI, Copy to RAM)
+title    Arch-Holo (x86_64, UEFI, Copy to RAM)
 sort-key 02
 linux    /%INSTALL_DIR%/boot/x86_64/vmlinuz-linux
 initrd   /%INSTALL_DIR%/boot/intel-ucode.img
