--- a/configs/releng/pacman.conf
+++ b/configs/releng/pacman.conf
@@ -76,7 +76,11 @@ LocalFileSigLevel = Optional
 [core]
 Include = /etc/pacman.d/mirrorlist
 
-[holo]
+[holo-main]
+Server = https://steamdeck-packages.steamos.cloud/archlinux-mirror/$repo/os/$arch
+SigLevel = Never
+
+[jupiter-main]
 Server = https://steamdeck-packages.steamos.cloud/archlinux-mirror/$repo/os/$arch
 SigLevel = Never
 
